Fix overflow hidden of the player

--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -72,6 +72,7 @@
 .content {
   display: flex;
   @include inner-border(var(--color-border-muted-default), 1px);
+  overflow: visible;
   background: var(--color-background-muted-default);
   border-radius: var(--radii-medium);
   width: 100%;
